--- a/configs/seezoon.yml
+++ b/configs/seezoon.yml
@@ -9,3 +9,9 @@ log:
   level: debug
   reportCaller: true
   outputToConsole: true
+db:
+  dsn: root:@tcp(127.0.0.1:3306)/seezoon?charset=utf8mb4&parseTime=True&loc=Local&timeout=1s
+  maxIdleConns: 1
+  connMaxLifetime: 3600
+  connMaxIdleTime: 600
+  maxOpenConns: 10
